--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "fideloper/proxy": "^4.4",
+        "goldspecdigital/laravel-eloquent-uuid": "^8.0",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.*"
