--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,17 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.0",
-        "fideloper/proxy": "^4.4",
-        "goldspecdigital/laravel-eloquent-uuid": "^8.0",
-        "laravel/framework": "^8.0",
+        "php": "^8.0.11",
+        "goldspecdigital/laravel-eloquent-uuid": "^9.0",
+        "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.*"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.0",
         "phpunit/phpunit": "^9.0|^9.3.3"
     },
     "config": {
